--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,9 @@ description = ""
 authors = ["Max Katz-Christy <maxkatzchristy@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">= 3.9, < 3.11"
 caldav = "^0.8.0"
 camelot-py = {extras = ["base"], version = "^0.10.1"}
-
-[tool.poetry.dev-dependencies]
-matplotlib = "^3.5.0"
-pyvoronoi = "^1.0.7"
-Shapely = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
